--- a/index.html
+++ b/index.html
@@ -80,8 +80,7 @@
     </div>
 
     <script src="bootstrap-5.3.2-dist/js/bootstrap.bundle.js"></script>
-    <!-- <script src="node_modules/jquery/dist/jquery.min.js"></script> -->
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="./node_modules/jquery/dist/jquery.min.js"></script>
     <script src="main.js"></script>
 </body>
 
