change some thing

--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
         </main>
     </div>
 
-    <div class="loading-screen top-0 start-0 end-0 bottom-0 w-100 justify-content-center align-items-center">
-        <i class="fa fa-spinner fa-spin fa-5x"></i>
+    <div class="loading-screen ts w-100 justify-content-center align-items-center">
+        <i class="fa fa-spinner text-white fa-spin fa-5x"></i>
     </div>
 
     <script src="bootstrap-5.3.2-dist/js/bootstrap.bundle.js"></script>
